--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Invoice App</string>
     <string name="title_activity_main">MainActivity</string>
     <!-- Strings used for fragments for navigation -->
+    <string name="splash_fragment_label">Splash Fragment</string>
     <string name="login_fragment_label">Login</string>
     <string name="register_fragment_label">Register</string>
     <string name="home_fragment_label">Home</string>
@@ -13,6 +14,11 @@
     <string name="submit">Submit</string>
     <string name="signup">New user? Register here</string>
     <string name="sign_out">Sign Out</string>
+
+    <!--dialog string-->
+    <string name="exit_dialog_title">Are you sure want to exit?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 
     <!--error messages-->
     <string name="error_invalid_name">Name should be atleast 3 characters long</string>
